# ChangeLog for sys-kernel/tuxonice-sources
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.12 2008/01/25 07:41:52 nelchael Exp $

*tuxonice-sources-2.6.23-r9 (25 Jan 2008)

  25 Jan 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r9.ebuild:
  Revision bump: TuxOnIce 3.0-rc5.

*tuxonice-sources-2.6.23-r8 (21 Jan 2008)

  21 Jan 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r8.ebuild:
  Revision bump: TuxOnIce 3.0-rc4.

*tuxonice-sources-2.6.23-r7 (21 Jan 2008)

  21 Jan 2008; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r7.ebuild:
  Revision bump for genpatches 7.

  28 Dec 2007; Markus Meier <maekke@gentoo.org>
  tuxonice-sources-2.6.23-r6.ebuild:
  x86 stable, bug #202064

*tuxonice-sources-2.6.23-r6 (23 Dec 2007)

  23 Dec 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r6.ebuild:
  Revision bump for genpatches 6.

*tuxonice-sources-2.6.23-r5 (15 Dec 2007)

  15 Dec 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r5.ebuild:
  Revision bump for genpatches 5.

*tuxonice-sources-2.6.23-r4 (02 Dec 2007)

  02 Dec 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r4.ebuild:
  Revision bump for tuxonice-3.0-rc3.

*tuxonice-sources-2.6.23-r3 (28 Nov 2007)

  28 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  +tuxonice-sources-2.6.23-r3.ebuild:
  Revision bump for genpatches 4.

*tuxonice-sources-2.6.23-r2 (20 Nov 2007)

  20 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml,
  +tuxonice-sources-2.6.23-r2.ebuild:
  Revision bump, changed maintainer.

*tuxonice-sources-2.6.23-r1 (05 Nov 2007)

  05 Nov 2007; Alon Bar-Lev <alonbl@gentoo.org>
  +tuxonice-sources-2.6.23-r1.ebuild:
  Version bump

*tuxonice-sources-2.6.23 (27 Oct 2007)

  27 Oct 2007; Alon Bar-Lev <alonbl@gentoo.org> +metadata.xml,
  +tuxonice-sources-2.6.23.ebuild: