@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST genpatches-2.6.23-1.base.tar.bz2 3147 RMD160 555ed180e4e700f3ce913fe460f05eb8f71dfe46 SHA1 3d68154d4d956460aa66b6c6d30e857696d8c2f2 SHA256 773cbe243642b1c10a49cab1175fa1c54c0ca67d6471257ce66417a754d87578
 DIST genpatches-2.6.23-1.extras.tar.bz2 57252 RMD160 201fdd76ba5024f662da2c2d20e03093bcecc6d5 SHA1 196238c658d68d9046b70c98d1340a1305a102df SHA256 50bf8799ea7816d72b0db7c0fa4b886379b7b49f366fd647130318ad5de314b6
 DIST genpatches-2.6.23-2.base.tar.bz2 6134 RMD160 b4d459e06a1a482fb4cfe51e8b693f9c95a6254b SHA1 b851ef449ec34d4331aba47774fe915cc2408e13 SHA256 fa6c34455470c4d57df1d51829a444343f7cbfca44d726843382baeec5ccbaec
@@ -12,12 +15,16 @@ DIST genpatches-2.6.23-6.base.tar.bz2 82841 RMD160 120ff54d3ed59be87539ffb43eb7a
 DIST genpatches-2.6.23-6.extras.tar.bz2 147992 RMD160 bb9cfc7687944b677799b2386bc4b36d95676cea SHA1 fc7f24df398033cdf8e0ff444020c58407aa9925 SHA256 9d272384be06e00ecfdfa1795262a0859e86acd09aa95c531ff311e210d87db6
 DIST genpatches-2.6.23-7.base.tar.bz2 83558 RMD160 12347bbc1a3dfd96dbe5cb638c40d646537737f8 SHA1 bc12250baecd513f2c8666b2287c6678673166ee SHA256 0068ddeab387fcdc36ee05b5312a4b4cc6a32adf3d7df4de8fa4b5c6c45cbad6
 DIST genpatches-2.6.23-7.extras.tar.bz2 147992 RMD160 bb9cfc7687944b677799b2386bc4b36d95676cea SHA1 fc7f24df398033cdf8e0ff444020c58407aa9925 SHA256 9d272384be06e00ecfdfa1795262a0859e86acd09aa95c531ff311e210d87db6
+DIST genpatches-2.6.24-1.base.tar.bz2 960 RMD160 a7b9932bc33e8a56da4bfafbdf16749bf141db6c SHA1 19271490c3faf040b7cf580123690785e95c1c66 SHA256 3f7c948b72494aed970be1187a75c7c8573ad500e35c5bc9610b87ffa42bd54f
+DIST genpatches-2.6.24-1.extras.tar.bz2 41902 RMD160 259b831110120518149bbccdacf9982330af5ef0 SHA1 48d85d6b6cf84369b34d6fbd169fbfdaf97fc83f SHA256 bc8723863cace59d8bcb6d84d678cc9c370a5e2144133f543396b45e4655b063
 DIST linux-2.6.23.tar.bz2 45488158 RMD160 755690e80751d5de86d260fe05c6eeadde116c4e SHA1 3a186adf13e44415796ab6381aa8979b16a5d5ca SHA256 d4e67c0935ffb2a4158234bff92cc791b83177866009fc9b2214104e0038dbdb
+DIST linux-2.6.24.tar.bz2 46737783 RMD160 0e5194c69c3d82c41ece689c4f84e638f8776d34 SHA1 351aebc784a5395fe4c92d1e514a89680482f7e2 SHA256 413c64fbbcf81244cb5571be4963644a1e81166a2b0f008a016528363b65c5d3
 DIST tuxonice-3.0-rc1-for-2.6.23.patch.bz2 103246 RMD160 afc9f344998b8a1b68a17744551cd572daa2f516 SHA1 9c319a812ba73859498faf827d88b16e3a1d4d13 SHA256 d65881bf88350083c9906c8f783b5f97f77c5271d3d9957bba03f3d628ffb652
 DIST tuxonice-3.0-rc2-for-2.6.23.1.patch.bz2 104787 RMD160 c6483adbcfa54582f077781884a4d0a0ccf9b858 SHA1 7b2eba961f29d4cba129648a89789cfb11485221 SHA256 ef86267b6f3d7e309221f5173a881afae1dfa57418be5b3963f2380b0633ca1a
 DIST tuxonice-3.0-rc3-for-2.6.23.9.patch.bz2 111146 RMD160 6a44034aa195e941483f62914be59e7c25b45596 SHA1 8cd1bd0c454f3f5b2a42e8d916577e8c35529a93 SHA256 d3651a4d37545f5640739109dcbf1b0415c44ed491f406e9f427b60a2c0bc699
 DIST tuxonice-3.0-rc4-for-2.6.23.14.patch.bz2 112446 RMD160 6377c5eab316ce885977817151d1223e607ee560 SHA1 9dfdb165db2b53bb305cda1e8ec56de36373fec8 SHA256 d9f3f88b1c4820a0661d34a6b58782e2d857762d2fc91223b7ce9432fdaceba4
 DIST tuxonice-3.0-rc5-for-2.6.23.14.patch.bz2 112636 RMD160 679e982c0c20f488a4b7447d6d7d9dcfc64b80b6 SHA1 ab3d5d7ceba68db8daf9c718ecd52250f9363e40 SHA256 2e5632332f8a0ff1a363a83455ac45cec11f3cafa96cbe0c0b3dd9d53348e1a0
+DIST tuxonice-3.0-rc5-for-2.6.24.patch.bz2 113258 RMD160 c1fde23de970b6347302ae2bff71bf3ab1bfbeb3 SHA1 bf559c8dead1d0372d3388e4f9d2c4d145862ec1 SHA256 0a3b502b89bebbcd0f701a0e89c072797257ce766b2ea2d2bda1f6762ca2ce9b
 EBUILD tuxonice-sources-2.6.23-r1.ebuild 1263 RMD160 5b1a3ec6d6d397e8f2bab70d616f1479484b10ac SHA1 ba7a9b5b5751aefbc970f8c026347e7193cec02b SHA256 bdbfee47f54ac71103671a427970a78979ad922e921930678b9bb85929493a6c
 EBUILD tuxonice-sources-2.6.23-r2.ebuild 1265 RMD160 e62bca066bcbcb2f5be89f2b24940a7651b2319a SHA1 242d31bd8d83441c2bef0abf4ca7f1ee87e32a01 SHA256 faf6a6cd387690f8bfb9dadce6054c2eb87ec2241455b790b8eb5c8a852e1eba
 EBUILD tuxonice-sources-2.6.23-r3.ebuild 1265 RMD160 d9bb37371d40283b2bd6eb7905bacaf2f32bf7d7 SHA1 3e82b20f5c7a5c49e8aae760492f37c1c377e1ce SHA256 e2004e23fe71920f43c123b1a71893e2d8dffe38f620c346fd4950c2eb8aa9ae
@@ -28,5 +35,13 @@ EBUILD tuxonice-sources-2.6.23-r7.ebuild 1265 RMD160 6cf1bb28ab8f715a83217b2a80d
 EBUILD tuxonice-sources-2.6.23-r8.ebuild 1266 RMD160 b3d4c049dea490b570d1ee5b99433be96e26cb8b SHA1 c342dc6d17459f304b450ba9c094bcb875c1e5c3 SHA256 099bb8d31a9cb51ba697bd8401e5cb185ad1d42111d273b88b82aa21ad69687b
 EBUILD tuxonice-sources-2.6.23-r9.ebuild 1266 RMD160 3d1e0dec995da460476a9df387481f7a8403c414 SHA1 c2944eb11fb8b895049f170b012815c67b6d1e13 SHA256 e40ccbe0b3f7b48f1e274900909a5557b9b08147899365da17abbda5f88a2a97
 EBUILD tuxonice-sources-2.6.23.ebuild 1258 RMD160 a7aed0774ce805c37e98f829f826aff6d338e6c0 SHA1 3bdd01c5d41ef28f2310f67e9aad580b7af1c0c2 SHA256 680b1e637b411643e7707899a24d8d7f3cfb0ac5492eff370573d6c23f875e52
-MISC ChangeLog 26803 RMD160 209496ca386ab5f7b39a038b4fecfc771a8891a4 SHA1 f1720bd5993a489f04686003ae62a55efefe34a0 SHA256 15c77796ced1e5f318484e91a1bc87d1930d4a850ca1602a3d1bea44b7e17940
+EBUILD tuxonice-sources-2.6.24.ebuild 1260 RMD160 d021d9745d9ef3bbc98c01591a6de9a3db01e7cb SHA1 17e2401aeb98992f0dee95e1d21702fc38f44a60 SHA256 8408869ee295a43dab769cc6565a09ca74422bfac851f4b6f4e8968eedae23be
+MISC ChangeLog 26948 RMD160 4a2f42eaaa61936412c8e1f5b2f7106fe3b53a6c SHA1 902c322ded5062381f0d97ac0bef547d5f80963d SHA256 9a8614363e50be39c6cfdfb3f26e9c70495aa7c3614cdb04646b330950d85130
 MISC metadata.xml 278 RMD160 ed11e2348ca2d8f2bd5d647afab7eedf49ed4fea SHA1 7fecfe735fd49536863c0045aa1548860ad89797 SHA256 17c4da4868f175afef2cf8bca329a88c874b117ed9c242ec2139864475606bbe
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHov+mgo/w9rxVVVERAvBwAJ9FiXdJ/I5wiUmgOcFyNDSy8xmMYgCeN6i/
+0Bh1GnFKYG1ETIGS0IjIQKk=
+=XsbR
+-----END PGP SIGNATURE-----
