@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/tuxonice-sources
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.12 2008/01/25 07:41:52 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/tuxonice-sources/ChangeLog,v 1.13 2008/02/01 11:16:46 nelchael Exp $
+
+*tuxonice-sources-2.6.24 (01 Feb 2008)
+
+  01 Feb 2008; Krzysiek Pawlik <nelchael@gentoo.org>
+  +tuxonice-sources-2.6.24.ebuild:
+  Version bump.
 
 *tuxonice-sources-2.6.23-r9 (25 Jan 2008)
 
